altv-capi/client/altv-capi.hpp


struct alt_String {
    char * data;
    unsigned long long size;
};
struct alt_StringView {
    const char * data;
    unsigned long long size;
};
struct alt_Array_MValue {
    struct alt_MValue* data;
    unsigned long long size;
    unsigned long long capacity;
};
struct alt_MValue {
    enum alt_MValue_Type type;
    struct alt_MValue_Storage* storage;
};
enum alt_MValue_Type {
    ALT_MVALUE_TYPE_NIL = 0,
    ALT_MVALUE_TYPE_BOOL = 1,
    ALT_MVALUE_TYPE_INT = 2,
    ALT_MVALUE_TYPE_UINT = 3,
    ALT_MVALUE_TYPE_DOUBLE = 4,
    ALT_MVALUE_TYPE_STRING = 5,
    ALT_MVALUE_TYPE_LIST = 6,
    ALT_MVALUE_TYPE_DICT = 7,
    ALT_MVALUE_TYPE_ENTITY = 8,
    ALT_MVALUE_TYPE_FUNCTION = 9
};
struct alt_MValue_Function {
    void * invoker;
};
struct alt_MValueList {
    enum alt_MValue_Type type;
    struct alt_MValue_Storage* storage;
};
struct alt_MValueFunction {
    enum alt_MValue_Type type;
    struct alt_MValue_Storage* storage;
};
CAPI struct alt_MValueFunction* alt_MValueFunction_Create_2(long long* val);
CAPI struct alt_MValueFunction* alt_MValueFunction_Create_3(unsigned long long* val);
CAPI struct alt_MValueFunction* alt_MValueFunction_Create_4(double* val);
CAPI struct alt_MValueFunction* alt_MValueFunction_Create_5(struct alt_String* val);
CAPI struct alt_MValueFunction* alt_MValueFunction_Create_6(struct alt_Array_MValue* val);
CAPI struct alt_MValueFunction* alt_MValueFunction_Create_8(struct alt_IBaseObject** val);
CAPI struct alt_MValueFunction* alt_MValueFunction_Create_9(struct alt_MValue_Function* val);
CAPI struct alt_MValueFunction* alt_MValueFunction_Create_10(int val);
CAPI struct alt_MValueFunction* alt_MValueFunction_Create_11(unsigned int val);
CAPI struct alt_MValueFunction* alt_MValueFunction_Create_12(char* val);
CAPI struct alt_MValueFunction* alt_MValueFunction_Create_14(struct alt_MValue* that);
CAPI void alt_MValueFunction_Assign_constMValueRef(struct alt_MValueFunction* _instance, struct alt_MValue* that);
CAPI _Bool alt_MValueFunction_ToBool(struct alt_MValueFunction* _instance);
CAPI long long alt_MValueFunction_ToInt(struct alt_MValueFunction* _instance);
CAPI unsigned long long alt_MValueFunction_ToUInt(struct alt_MValueFunction* _instance);
CAPI struct alt_String* alt_MValueFunction_ToString(struct alt_MValueFunction* _instance);
CAPI enum alt_MValue_Type alt_MValueFunction_GetType(struct alt_MValueFunction* _instance);
CAPI struct alt_MValueFunction* alt_MValueFunction_Create_15(struct alt_MValue_Function* func);
CAPI struct alt_MValueFunction* alt_MValueFunction_Create_16(struct alt_MValueFunction_Invoker* invoker);
CAPI struct alt_MValueFunction* alt_MValueFunction_Create_17(struct alt_MValue* val);
CAPI struct alt_MValueFunction_Invoker* alt_MValueFunction_GetInvoker(struct alt_MValueFunction* _instance);
CAPI struct alt_MValueFunction* alt_MValueFunction_Create_18(struct alt_MValueFunction* _p0);
CAPI struct alt_MValueFunction* alt_MValueFunction_Create_19(struct alt_MValueFunction* _p0);
CAPI void alt_MValueFunction_Assign_MValueFunctionRefRef(struct alt_MValueFunction* _instance, struct alt_MValueFunction* _p0);
struct alt_MValueFunction_Invoker {};
CAPI void alt_MValueFunction_Invoker_free(struct alt_MValueFunction_Invoker* ptr);
CAPI struct alt_MValue* alt_MValueFunction_Invoker_Invoke(struct alt_MValueFunction_Invoker* _instance, struct alt_MValueList* args);
CAPI void alt_MValueFunction_Invoker_Assign_constMValueFunction_InvokerRef(struct alt_MValueFunction_Invoker* _instance, struct alt_MValueFunction_Invoker* _p0);
CAPI void alt_MValueFunction_Invoker_Assign_MValueFunction_InvokerRefRef(struct alt_MValueFunction_Invoker* _instance, struct alt_MValueFunction_Invoker* _p0);
struct alt_IBaseObject {};
CAPI enum alt_IBaseObject_Type alt_IBaseObject_GetType(struct alt_IBaseObject* _instance);
CAPI struct alt_MValue* alt_IBaseObject_GetMetaData(struct alt_IBaseObject* _instance, struct alt_StringView* key);
CAPI void alt_IBaseObject_SetMetaData(struct alt_IBaseObject* _instance, struct alt_StringView* key, struct alt_MValue* val);
CAPI void alt_IBaseObject_Assign_constIBaseObjectRef(struct alt_IBaseObject* _instance, struct alt_IBaseObject* _p0);
enum alt_IBaseObject_Type {
    ALT_IBASEOBJECT_TYPE_PLAYER = 0,
    ALT_IBASEOBJECT_TYPE_VEHICLE = 1,
    ALT_IBASEOBJECT_TYPE_CHECKPOINT = 2,
    ALT_IBASEOBJECT_TYPE_BLIP = 3,
    ALT_IBASEOBJECT_TYPE_WEBVIEW = 4,
    ALT_IBASEOBJECT_TYPE_VOICE_CHANNEL = 5,
    ALT_IBASEOBJECT_TYPE_COLSHAPE = 6
};
struct alt_IWorldObject {};
CAPI enum alt_IBaseObject_Type alt_IWorldObject_GetType(struct alt_IWorldObject* _instance);
CAPI struct alt_MValue* alt_IWorldObject_GetMetaData(struct alt_IWorldObject* _instance, struct alt_StringView* key);
CAPI void alt_IWorldObject_SetMetaData(struct alt_IWorldObject* _instance, struct alt_StringView* key, struct alt_MValue* val);
CAPI void alt_IWorldObject_Assign_constIBaseObjectRef(struct alt_IWorldObject* _instance, struct alt_IBaseObject* _p0);
CAPI struct alt_Vector_float_3_PointLayout* alt_IWorldObject_GetPosition(struct alt_IWorldObject* _instance);
CAPI short alt_IWorldObject_GetDimension(struct alt_IWorldObject* _instance);
CAPI void alt_IWorldObject_Assign_constIWorldObjectRef(struct alt_IWorldObject* _instance, struct alt_IWorldObject* _p0);
struct alt_IEntity {};
CAPI enum alt_IBaseObject_Type alt_IEntity_GetType(struct alt_IEntity* _instance);
CAPI struct alt_MValue* alt_IEntity_GetMetaData(struct alt_IEntity* _instance, struct alt_StringView* key);
CAPI void alt_IEntity_SetMetaData(struct alt_IEntity* _instance, struct alt_StringView* key, struct alt_MValue* val);
CAPI void alt_IEntity_Assign_constIBaseObjectRef(struct alt_IEntity* _instance, struct alt_IBaseObject* _p0);
CAPI struct alt_Vector_float_3_PointLayout* alt_IEntity_GetPosition(struct alt_IEntity* _instance);
CAPI short alt_IEntity_GetDimension(struct alt_IEntity* _instance);
CAPI void alt_IEntity_Assign_constIWorldObjectRef(struct alt_IEntity* _instance, struct alt_IWorldObject* _p0);
CAPI unsigned short alt_IEntity_GetID(struct alt_IEntity* _instance);
CAPI unsigned int alt_IEntity_GetModel(struct alt_IEntity* _instance);
CAPI struct alt_Vector_float_3_RotationLayout* alt_IEntity_GetRotation(struct alt_IEntity* _instance);
CAPI void alt_IEntity_SetRotation(struct alt_IEntity* _instance, struct alt_Vector_float_3_RotationLayout* rot);
CAPI struct alt_MValue* alt_IEntity_GetSyncedMetaData(struct alt_IEntity* _instance, struct alt_StringView* key);
CAPI void alt_IEntity_Assign_constIEntityRef(struct alt_IEntity* _instance, struct alt_IEntity* _p0);
struct alt_IPlayer {};
CAPI enum alt_IBaseObject_Type alt_IPlayer_GetType(struct alt_IPlayer* _instance);
CAPI struct alt_MValue* alt_IPlayer_GetMetaData(struct alt_IPlayer* _instance, struct alt_StringView* key);
CAPI void alt_IPlayer_SetMetaData(struct alt_IPlayer* _instance, struct alt_StringView* key, struct alt_MValue* val);
CAPI void alt_IPlayer_Assign_constIBaseObjectRef(struct alt_IPlayer* _instance, struct alt_IBaseObject* _p0);
CAPI struct alt_Vector_float_3_PointLayout* alt_IPlayer_GetPosition(struct alt_IPlayer* _instance);
CAPI short alt_IPlayer_GetDimension(struct alt_IPlayer* _instance);
CAPI void alt_IPlayer_Assign_constIWorldObjectRef(struct alt_IPlayer* _instance, struct alt_IWorldObject* _p0);
CAPI unsigned short alt_IPlayer_GetID(struct alt_IPlayer* _instance);
CAPI unsigned int alt_IPlayer_GetModel(struct alt_IPlayer* _instance);
CAPI struct alt_Vector_float_3_RotationLayout* alt_IPlayer_GetRotation(struct alt_IPlayer* _instance);
CAPI void alt_IPlayer_SetRotation(struct alt_IPlayer* _instance, struct alt_Vector_float_3_RotationLayout* rot);
CAPI struct alt_MValue* alt_IPlayer_GetSyncedMetaData(struct alt_IPlayer* _instance, struct alt_StringView* key);
CAPI void alt_IPlayer_Assign_constIEntityRef(struct alt_IPlayer* _instance, struct alt_IEntity* _p0);
CAPI _Bool alt_IPlayer_IsConnected(struct alt_IPlayer* _instance);
CAPI unsigned int alt_IPlayer_GetPing(struct alt_IPlayer* _instance);
CAPI struct alt_StringView* alt_IPlayer_GetIP(struct alt_IPlayer* _instance);
CAPI void alt_IPlayer_Spawn(struct alt_IPlayer* _instance, struct alt_Vector_float_3_PointLayout* pos, unsigned int delayMs);
CAPI void alt_IPlayer_Despawn(struct alt_IPlayer* _instance);
CAPI struct alt_StringView* alt_IPlayer_GetName(struct alt_IPlayer* _instance);
CAPI void alt_IPlayer_SetName(struct alt_IPlayer* _instance, struct alt_StringView* name);
CAPI unsigned short alt_IPlayer_GetHealth(struct alt_IPlayer* _instance);
CAPI void alt_IPlayer_SetHealth(struct alt_IPlayer* _instance, unsigned short health);