client/src/altv_capi.rs

fn alt_MValueFunction_Create_2 ( val : * mut :: std :: os :: raw :: c_longlong ) -> * mut alt_MValueFunction ; } extern "C" { pub fn alt_MValueFunction_Create_3 ( val : * mut :: std :: os :: raw :: c_ulonglong ) -> * mut alt_MValueFunction ; } extern "C" { pub fn alt_MValueFunction_Create_4 ( val : * mut f64 ) -> * mut alt_MValueFunction ; } extern "C" { pub fn alt_MValueFunction_Create_5 ( val : * mut alt_String ) -> * mut alt_MValueFunction ; } extern "C" { pub fn alt_MValueFunction_Create_6 ( val : * mut alt_Array_MValue ) -> * mut alt_MValueFunction ; } extern "C" { pub fn alt_MValueFunction_Create_8 ( val : * mut * mut alt_IBaseObject ) -> * mut alt_MValueFunction ; } extern "C" { pub fn alt_MValueFunction_Create_9 ( val : * mut alt_MValue_Function ) -> * mut alt_MValueFunction ; } extern "C" { pub fn alt_MValueFunction_Create_10 ( val : :: std :: os :: raw :: c_int ) -> * mut alt_MValueFunction ; } extern "C" { pub fn alt_MValueFunction_Create_11 ( val : :: std :: os :: raw :: c_uint ) -> * mut alt_MValueFunction ; } extern "C" { pub fn alt_MValueFunction_Create_12 ( val : * mut :: std :: os :: raw :: c_char ) -> * mut alt_MValueFunction ; } extern "C" { pub fn alt_MValueFunction_Create_14 ( that : * mut alt_MValue ) -> * mut alt_MValueFunction ; } extern "C" { pub fn alt_MValueFunction_Assign_constMValueRef ( _instance : * mut alt_MValueFunction , that : * mut alt_MValue ) ; } extern "C" { pub fn alt_MValueFunction_ToBool ( _instance : * mut alt_MValueFunction ) -> bool ; } extern "C" { pub fn alt_MValueFunction_ToInt ( _instance : * mut alt_MValueFunction ) -> :: std :: os :: raw :: c_longlong ; } extern "C" { pub fn alt_MValueFunction_ToUInt ( _instance : * mut alt_MValueFunction ) -> :: std :: os :: raw :: c_ulonglong ; } extern "C" { pub fn alt_MValueFunction_ToString ( _instance : * mut alt_MValueFunction ) -> * mut alt_String ; } extern "C" { pub fn alt_MValueFunction_GetType ( _instance : * mut alt_MValueFunction ) -> alt_MValue_Type ; } extern "C" { pub fn alt_MValueFunction_Create_15 ( func : * mut alt_MValue_Function ) -> * mut alt_MValueFunction ; } extern "C" { pub fn alt_MValueFunction_Create_16 ( invoker : * mut alt_MValueFunction_Invoker ) -> * mut alt_MValueFunction ; } extern "C" { pub fn alt_MValueFunction_Create_17 ( val : * mut alt_MValue ) -> * mut alt_MValueFunction ; } extern "C" { pub fn alt_MValueFunction_GetInvoker ( _instance : * mut alt_MValueFunction ) -> * mut alt_MValueFunction_Invoker ; } extern "C" { pub fn alt_MValueFunction_Create_18 ( _p0 : * mut alt_MValueFunction ) -> * mut alt_MValueFunction ; } extern "C" { pub fn alt_MValueFunction_Create_19 ( _p0 : * mut alt_MValueFunction ) -> * mut alt_MValueFunction ; } extern "C" { pub fn alt_MValueFunction_Assign_MValueFunctionRefRef ( _instance : * mut alt_MValueFunction , _p0 : * mut alt_MValueFunction ) ; } # [ repr ( C ) ] # [ derive ( Debug , Copy , Clone ) ] pub struct alt_MValueFunction_Invoker { pub _address : u8 , } # [ test ] fn bindgen_test_layout_alt_MValueFunction_Invoker ( ) { assert_eq ! ( :: std :: mem :: size_of :: < alt_MValueFunction_Invoker > ( ) , 1usize , concat ! ( "Size of: " , stringify ! ( alt_MValueFunction_Invoker ) ) ) ; assert_eq ! ( :: std :: mem :: align_of :: < alt_MValueFunction_Invoker > ( ) , 1usize , concat ! ( "Alignment of " , stringify ! ( alt_MValueFunction_Invoker ) ) ) ; } extern "C" { pub fn alt_MValueFunction_Invoker_free ( ptr : * mut alt_MValueFunction_Invoker ) ; } extern "C" { pub fn alt_MValueFunction_Invoker_Invoke ( _instance : * mut alt_MValueFunction_Invoker , args : * mut alt_MValueList ) -> * mut alt_MValue ; } extern "C" { pub fn alt_MValueFunction_Invoker_Assign_constMValueFunction_InvokerRef ( _instance : * mut alt_MValueFunction_Invoker , _p0 : * mut alt_MValueFunction_Invoker ) ; } extern "C" { pub fn alt_MValueFunction_Invoker_Assign_MValueFunction_InvokerRefRef ( _instance : * mut alt_MValueFunction_Invoker , _p0 : * mut alt_MValueFunction_Invoker ) ; } # [ repr ( C ) ] # [ derive ( Debug , Copy , Clone ) ] pub struct alt_IBaseObject { pub _address : u8 , } # [ test ] fn bindgen_test_layout_alt_IBaseObject ( ) { assert_eq ! ( :: std :: mem :: size_of :: < alt_IBaseObject > ( ) , 1usize , concat ! ( "Size of: " , stringify ! ( alt_IBaseObject ) ) ) ; assert_eq ! ( :: std :: mem :: align_of :: < alt_IBaseObject > ( ) , 1usize , concat ! ( "Alignment of " , stringify ! ( alt_IBaseObject ) ) ) ; } extern "C" { pub fn alt_IBaseObject_GetType ( _instance : * mut alt_IBaseObject ) -> alt_IBaseObject_Type ; } extern "C" { pub fn alt_IBaseObject_GetMetaData ( _instance : * mut alt_IBaseObject , key : * mut alt_StringView ) -> * mut alt_MValue ; } extern "C" { pub fn alt_IBaseObject_SetMetaData ( _instance : * mut alt_IBaseObject , key : * mut alt_StringView , val : * mut alt_MValue ) ; } extern "C" { pub fn alt_IBaseObject_Assign_constIBaseObjectRef ( _instance : * mut alt_IBaseObject , _p0 : * mut alt_IBaseObject ) ; } pub const alt_IBaseObject_Type_ALT_IBASEOBJECT_TYPE_PLAYER : alt_IBaseObject_Type = 0 ; pub const alt_IBaseObject_Type_ALT_IBASEOBJECT_TYPE_VEHICLE : alt_IBaseObject_Type = 1 ; pub const alt_IBaseObject_Type_ALT_IBASEOBJECT_TYPE_CHECKPOINT : alt_IBaseObject_Type = 2 ; pub const alt_IBaseObject_Type_ALT_IBASEOBJECT_TYPE_BLIP : alt_IBaseObject_Type = 3 ; pub const alt_IBaseObject_Type_ALT_IBASEOBJECT_TYPE_WEBVIEW : alt_IBaseObject_Type = 4 ; pub const alt_IBaseObject_Type_ALT_IBASEOBJECT_TYPE_VOICE_CHANNEL : alt_IBaseObject_Type = 5 ; pub const alt_IBaseObject_Type_ALT_IBASEOBJECT_TYPE_COLSHAPE : alt_IBaseObject_Type = 6 ; pub type alt_IBaseObject_Type = i32 ; # [ repr ( C ) ] # [ derive ( Debug , Copy , Clone ) ] pub struct alt_IWorldObject { pub _address : u8 , } # [ test ] fn bindgen_test_layout_alt_IWorldObject ( ) { assert_eq ! ( :: std :: mem :: size_of :: < alt_IWorldObject > ( ) , 1usize , concat ! ( "Size of: " , stringify ! ( alt_IWorldObject ) ) ) ; assert_eq ! ( :: std :: mem :: align_of :: < alt_IWorldObject > ( ) , 1usize , concat ! ( "Alignment of " , stringify ! ( alt_IWorldObject ) ) ) ; } extern "C" { pub fn alt_IWorldObject_GetType ( _instance : * mut alt_IWorldObject ) -> alt_IBaseObject_Type ; } extern "C" { pub fn alt_IWorldObject_GetMetaData ( _instance : * mut alt_IWorldObject , key : * mut alt_StringView ) -> * mut alt_MValue ; } extern "C" { pub fn alt_IWorldObject_SetMetaData ( _instance : * mut alt_IWorldObject , key : * mut alt_StringView , val : * mut alt_MValue ) ; } extern "C" { pub fn alt_IWorldObject_Assign_constIBaseObjectRef ( _instance : * mut alt_IWorldObject , _p0 : * mut alt_IBaseObject ) ; } extern "C" { pub fn alt_IWorldObject_GetPosition ( _instance : * mut alt_IWorldObject ) -> * mut alt_Vector_float_3_PointLayout ; } extern "C" { pub fn alt_IWorldObject_GetDimension ( _instance : * mut alt_IWorldObject ) -> :: std :: os :: raw :: c_short ; } extern "C" { pub fn alt_IWorldObject_Assign_constIWorldObjectRef ( _instance : * mut alt_IWorldObject , _p0 : * mut alt_IWorldObject ) ; } # [ repr ( C ) ] # [ derive ( Debug , Copy , Clone ) ] pub struct alt_IEntity { pub _address : u8 , } # [ test ] fn bindgen_test_layout_alt_IEntity ( ) { assert_eq ! ( :: std :: mem :: size_of :: < alt_IEntity > ( ) , 1usize , concat ! ( "Size of: " , stringify ! ( alt_IEntity ) ) ) ; assert_eq ! ( :: std :: mem :: align_of :: < alt_IEntity > ( ) , 1usize , concat ! ( "Alignment of " , stringify ! ( alt_IEntity ) ) ) ; } extern "C" { pub fn alt_IEntity_GetType ( _instance : * mut alt_IEntity ) -> alt_IBaseObject_Type ; } extern "C" { pub fn alt_IEntity_GetMetaData ( _instance : * mut alt_IEntity , key : * mut alt_StringView ) -> * mut alt_MValue ; } extern "C" { pub fn alt_IEntity_SetMetaData ( _instance : * mut alt_IEntity , key : * mut alt_StringView , val : * mut alt_MValue ) ; } extern "C" { pub fn alt_IEntity_Assign_constIBaseObjectRef ( _instance : * mut alt_IEntity , _p0 : * mut alt_IBaseObject ) ; } extern "C" { pub fn alt_IEntity_GetPosition ( _instance : * mut alt_IEntity ) -> * mut alt_Vector_float_3_PointLayout ; } extern "C" { pub fn alt_IEntity_GetDimension ( _instance : * mut alt_IEntity ) -> :: std :: os :: raw :: c_short ; } extern "C" { pub fn alt_IEntity_Assign_constIWorldObjectRef ( _instance : * mut alt_IEntity , _p0 : * mut alt_IWorldObject ) ; } extern "C" { pub fn alt_IEntity_GetID ( _instance : * mut alt_IEntity ) -> :: std :: os :: raw :: c_ushort ; } extern "C" { pub fn alt_IEntity_GetModel ( _instance : * mut alt_IEntity ) -> :: std :: os :: raw :: c_uint ; } extern "C" { pub fn alt_IEntity_GetRotation ( _instance : * mut alt_IEntity ) -> * mut alt_Vector_float_3_RotationLayout ; } extern "C" { pub fn alt_IEntity_SetRotation ( _instance : * mut alt_IEntity , rot : * mut alt_Vector_float_3_RotationLayout ) ; } extern "C" { pub fn alt_IEntity_GetSyncedMetaData ( _instance : * mut alt_IEntity , key : * mut alt_StringView ) -> * mut alt_MValue ; } extern "C" { pub fn alt_IEntity_Assign_constIEntityRef ( _instance : * mut alt_IEntity , _p0 : * mut alt_IEntity ) ; } # [ repr ( C ) ] # [ derive ( Debug , Copy , Clone ) ] pub struct alt_IPlayer { pub _address : u8 , } # [ test ] fn bindgen_test_layout_alt_IPlayer ( ) { assert_eq ! ( :: std :: mem :: size_of :: < alt_IPlayer > ( ) , 1usize , concat ! ( "Size of: " , stringify ! ( alt_IPlayer ) ) ) ; assert_eq ! ( :: std :: mem :: align_of :: < alt_IPlayer > ( ) , 1usize , concat ! ( "Alignment of " , stringify ! ( alt_IPlayer ) ) ) ; } extern "C" { pub fn alt_IPlayer_GetType ( _instance : * mut alt_IPlayer ) -> alt_IBaseObject_Type ; } extern "C" { pub fn alt_IPlayer_GetMetaData ( _instance : * mut alt_IPlayer , key : * mut alt_StringView ) -> * mut alt_MValue ; } extern "C" { pub fn alt_IPlayer_SetMetaData ( _instance : * mut alt_IPlayer , key : * mut alt_StringView , val : * mut alt_MValue ) ; } extern "C" { pub fn alt_IPlayer_Assign_constIBaseObjectRef ( _instance : * mut alt_IPlayer , _p0 : * mut alt_IBaseObject ) ; } extern "C" { pub fn alt_IPlayer_GetPosition ( _instance : * mut alt_IPlayer ) -> * mut alt_Vector_float_3_PointLayout ; } extern "C" { pub fn alt_IPlayer_GetDimension ( _instance : * mut alt_IPlayer ) -> :: std :: os :: raw :: c_short ; } extern "C" { pub fn alt_IPlayer_Assign_constIWorldObjectRef ( _instance : * mut alt_IPlayer , _p0 : * mut alt_IWorldObject ) ; } extern "C" { pub fn alt_IPlayer_GetID ( _instance : * mut alt_IPlayer ) -> :: std :: os :: raw :: c_ushort ; } extern "C" { pub fn alt_IPlayer_GetModel ( _instance : * mut alt_IPlayer ) -> :: std :: os :: raw :: c_uint ; } extern "C" { pub fn alt_IPlayer_GetRotation ( _instance : * mut alt_IPlayer ) -> * mut alt_Vector_float_3_RotationLayout ; } extern "C" { pub fn alt_IPlayer_SetRotation ( _instance : * mut alt_IPlayer , rot : * mut alt_Vector_float_3_RotationLayout ) ; } extern "C" { pub fn alt_IPlayer_GetSyncedMetaData ( _instance : * mut alt_IPlayer , key : * mut alt_StringView ) -> * mut alt_MValue ; } extern "C" { pub fn alt_IPlayer_Assign_constIEntityRef ( _instance : * mut alt_IPlayer , _p0 : * mut alt_IEntity ) ; } extern "C" { pub fn alt_IPlayer_IsConnected ( _instance : * mut alt_IPlayer ) -> bool ; } extern "C" { pub fn alt_IPlayer_GetPing ( _instance : * mut alt_IPlayer ) -> :: std :: os :: raw :: c_uint ; } extern "C" { pub fn alt_IPlayer_GetIP ( _instance : * mut alt_IPlayer ) -> * mut alt_StringView ; } extern "C" { pub fn alt_IPlayer_Spawn ( _instance : * mut alt_IPlayer , pos : * mut alt_Vector_float_3_PointLayout , delayMs : :: std :: os :: raw :: c_uint ) ; } extern "C" { pub fn alt_IPlayer_Despawn ( _instance : * mut alt_IPlayer ) ; } extern "C" { pub fn alt_IPlayer_GetName ( _instance : * mut alt_IPlayer ) -> * mut alt_StringView ; } extern "C" { pub fn alt_IPlayer_SetName ( _instance : * mut alt_IPlayer , name : * mut alt_StringView ) ; } extern "C" { pub fn alt_IPlayer_GetHealth ( _instance : * mut alt_IPlayer ) -> :: std :: os :: raw :: c_ushort ; } extern "C" { pub fn alt_IPlayer_SetHealth ( _instance : * mut alt_IPlayer , hea